[package]
name = "garbling"
version = "0.1.0"
edition = "2021"

[dependencies]
garbling-core = { path = "core" }
garbling-methods = { path = "methods" }
risc0-zkvm = "2.0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
prove = ["risc0-zkvm/prove"]
