[package]
name = "freexorgarble"
version = "0.12.0"
edition = "2021"

[workspace]

[dependencies]
garbling-core = { path = "../../core" }
risc0-zkvm = { version = "2.0.2", default-features = false, features = ["std"]}
# risc0-zkvm = { path = "../../../../risc0/zkvm", default-features = false, features = ["std"] }
